--- a/govuk/account/messages/messages_en.properties
+++ b/govuk/account/messages/messages_en.properties
@@ -8,17 +8,17 @@ doLogIn=Log In
 doLink=Link
 
 
-editAccountHtmlTitle=Edit Account
-personalInfoHtmlTitle=Personal Info
-federatedIdentitiesHtmlTitle=Federated Identities
-accountLogHtmlTitle=Account Log
-changePasswordHtmlTitle=Change Password
-deviceActivityHtmlTitle=Device Activity
+editAccountHtmlTitle=Edit account
+personalInfoHtmlTitle=Personal info
+federatedIdentitiesHtmlTitle=Federated identities
+accountLogHtmlTitle=Account log
+changePasswordHtmlTitle=Change your password
+deviceActivityHtmlTitle=Device activity
 sessionsHtmlTitle=Sessions
-accountManagementTitle=Keycloak Account Management
+accountManagementTitle=Keycloak account management
 authenticatorTitle=Authenticator
-applicationsHtmlTitle=Applications
-linkedAccountsHtmlTitle=Linked Accounts
+applicationsHtmlTitle=Your applications
+linkedAccountsHtmlTitle=Linked accounts
 
 accountManagementWelcomeMessage=Welcome to Keycloak Account Management
 personalInfoIntroMessage=Manage your basic information
@@ -42,8 +42,8 @@ lastName=Last name
 familyName=Family name
 password=Password
 currentPassword=Current Password
-passwordConfirm=Confirmation
-passwordNew=New Password
+passwordConfirm=Repeat new password
+passwordNew=New password
 username=Username
 address=Address
 street=Street
@@ -104,7 +104,7 @@ details=Details
 started=Started
 lastAccess=Last Access
 expires=Expires
-applications=Applications
+applications=Your services
 
 account=Account
 federatedIdentity=Federated Identity
