MSPSDS-621: Final style fixes

--- a/govuk/account/messages/messages_en.properties
+++ b/govuk/account/messages/messages_en.properties
@@ -17,7 +17,7 @@ deviceActivityHtmlTitle=Device activity
 sessionsHtmlTitle=Sessions
 accountManagementTitle=Keycloak account management
 authenticatorTitle=Authenticator
-applicationsHtmlTitle=Your applications
+applicationsHtmlTitle=Your services
 linkedAccountsHtmlTitle=Linked accounts
 
 accountManagementWelcomeMessage=Welcome to Keycloak Account Management
@@ -40,7 +40,7 @@ givenName=Given name
 fullName=Full name
 lastName=Last name
 familyName=Family name
-password=Password
+password=Previous password
 currentPassword=Current Password
 passwordConfirm=Repeat new password
 passwordNew=New password
