COSBETA-193: Implement content and design review changes

--- a/govuk-cosmetics/login/messages/messages_en.properties
+++ b/govuk-cosmetics/login/messages/messages_en.properties
@@ -1,19 +1,19 @@
 loginTitle=Sign in to submit cosmetic product notifications
-registerText=If you don''t already have an account,
+registerText=If you do not already have an account,
 registerLink=create an account
 
-registerWithTitle=Your personal details
+registerWithTitle=Your details
 registerEmailAddress=Work email address
 firstName=Full name
 mobileNumber=Mobile phone number
-mobileNumberHint=To help keep your account secure, we''ll send a verification code to your phone whenever you log in.
+mobileNumberHint=To help keep your account secure, we\u2019ll send a verification code to your phone whenever you log in.
 createPassword=Password
 passwordHint=At least 8 characters
 doRegister=Continue
 
-missingFirstNameMessage=Enter your full name
-missingEmailMessage=Enter your email address
+missingFirstNameMessage=Full name can not be blank
+missingEmailMessage=Email address can not be blank
 emailExistsMessage=An account with that email address already exists
-invalidEmailMessage=Enter an email address in the correct format, like name@example.com
-missingMobileNumberMessage=Enter your mobile phone number
-invalidMobileNumberMessage=Enter a mobile phone number in the correct format, like 07700 900982 or +44 7700 900372
+invalidEmailMessage=Enter an email address in the correct format, for example, name@example.com
+missingMobileNumberMessage=Phone number can not be blank
+invalidMobileNumberMessage=Enter a mobile phone number in the correct format, for example, 07700\u00A0900982 or +44\u00A07700\u00A0900372
