--- a/govuk/login/messages/messages_en.properties
+++ b/govuk/login/messages/messages_en.properties
@@ -13,7 +13,7 @@ emailForgotTitle=Reset your password
 backToLogin=Back
 emailInstruction=Enter the email address that you used to register. We will send you an email with a link to reset your password.
 usernameOrEmail=Email address
-missingUsernameMessage=Enter your email address
+missingUsernameMessage=Email address can not be blank
 invalidUserMessage=Invalid username or password
 emailSentMessage=<b>Password reset email sent:</b> If an account with the this email address exists, we will send you an email with a link to reset the password.
 loginTotpTitle=Mobile authenticator setup
@@ -25,10 +25,10 @@ termsTitle=Terms and conditions
 termsTitleHtml=Terms and conditions
 termsIntro=Agree that you have read and understood the terms and conditions. 
 loginProfileTitle=Update your details
-missingFirstNameMessage=Enter your full name
-missingEmailMessage=Enter your email address
+missingFirstNameMessage=Full name can not be blank
+missingEmailMessage=Email address can not be blank
 emailExistsMessage=An account with that email address already exists
-invalidEmailMessage=Enter an email address in the correct format, like name@example.com
+invalidEmailMessage=Enter an email address in the correct format, for example, name@example.com
 resetPasswordTitle=Choose a password
 passwordNew=New password
 passwordNewHint=At least 8 characters
@@ -58,9 +58,8 @@ manageYourAccount=Manage your account to use services provided by The Office for
 emailVerifyTitle=Check your email
 emailVerifyInstruction1=We have sent an email to you.
 emailVerifyInstruction2=You need to click the link in the email to continue your registration.
-emailVerifyInstruction3=If you haven''t received the email,
-doResendEmail=re-send the account confirmation email.
-returnToLogin=Return to login page
+emailVerifyInstruction3=If you have not received the email,
+doResendEmail=re-send the account confirmation email
 
 socialProviders=Sign in with...
 
