COSBETA-193: Apply markups * Revert errors to "Enter a/your {field}" * Remove link to return to login page in the "check your email" page

--- a/govuk/login/messages/messages_en.properties
+++ b/govuk/login/messages/messages_en.properties
@@ -13,7 +13,7 @@ emailForgotTitle=Reset your password
 backToLogin=Back
 emailInstruction=Enter the email address that you used to register. We will send you an email with a link to reset your password.
 usernameOrEmail=Email address
-missingUsernameMessage=Email address can not be blank
+missingUsernameMessage=Enter your email address
 invalidUserMessage=Invalid username or password
 emailSentMessage=<b>Password reset email sent:</b> If an account with the this email address exists, we will send you an email with a link to reset the password.
 loginTotpTitle=Mobile authenticator setup
@@ -25,8 +25,8 @@ termsTitle=Terms and conditions
 termsTitleHtml=Terms and conditions
 termsIntro=Agree that you have read and understood the terms and conditions. 
 loginProfileTitle=Update your details
-missingFirstNameMessage=Full name can not be blank
-missingEmailMessage=Email address can not be blank
+missingFirstNameMessage=Enter your full name
+missingEmailMessage=Enter your email address
 emailExistsMessage=An account with that email address already exists
 invalidEmailMessage=Enter an email address in the correct format, for example, name@example.com
 resetPasswordTitle=Choose a password
