--- a/govuk-cosmetics/login/messages/messages_en.properties
+++ b/govuk-cosmetics/login/messages/messages_en.properties
@@ -11,9 +11,9 @@ createPassword=Password
 passwordHint=At least 8 characters
 doRegister=Continue
 
-missingFirstNameMessage=Full name can not be blank
-missingEmailMessage=Email address can not be blank
+missingFirstNameMessage=Enter your full name
+missingEmailMessage=Enter your email address
 emailExistsMessage=An account with that email address already exists
 invalidEmailMessage=Enter an email address in the correct format, for example, name@example.com
-missingMobileNumberMessage=Phone number can not be blank
+missingMobileNumberMessage=Enter your mobile phone number
 invalidMobileNumberMessage=Enter a mobile phone number in the correct format, for example, 07700\u00A0900982 or +44\u00A07700\u00A0900372
