PSD-1125: Use full name instead of first and last name on account pages

--- a/govuk/account/messages/messages_en.properties
+++ b/govuk/account/messages/messages_en.properties
@@ -35,11 +35,7 @@ personalSubMessage=Manage this basic information: your first name, last name and
 
 authenticatorCode=One-time code
 email=Email
-firstName=First name
-givenName=Given name
-fullName=Full name
-lastName=Last name
-familyName=Family name
+firstName=Full name
 password=Previous password
 currentPassword=Current Password
 passwordConfirm=Repeat new password
@@ -145,7 +141,7 @@ totpInterval=Interval
 totpCounter=Counter
 
 missingUsernameMessage=Please specify username.
-missingFirstNameMessage=Please specify first name.
+missingFirstNameMessage=Enter your full name
 invalidEmailMessage=Invalid email address.
 missingLastNameMessage=Please specify last name.
 missingEmailMessage=Please specify email.
