PSD-????: Update account page error messages for consistency with login

--- a/govuk/account/messages/messages_en.properties
+++ b/govuk/account/messages/messages_en.properties
@@ -140,22 +140,25 @@ totpDigits=Digits
 totpInterval=Interval
 totpCounter=Counter
 
-missingUsernameMessage=Please specify username.
 missingFirstNameMessage=Enter your full name
-invalidEmailMessage=Invalid email address.
-missingLastNameMessage=Please specify last name.
-missingEmailMessage=Please specify email.
-missingPasswordMessage=Please specify password.
-notMatchPasswordMessage=Passwords don''t match.
+missingEmailMessage=Enter your email address
+emailExistsMessage=An account with that email address already exists
+invalidEmailMessage=Enter an email address in the correct format, for example, name@example.com
+
 invalidUserMessage=Invalid user
+missingPasswordMessage=Choose a new password
+notMatchPasswordMessage=The passwords you enter must be identical
+invalidPasswordConfirmMessage=The passwords you enter must be identical
+invalidPasswordMinLengthMessage=Your password must have a length of at least {0} characters
+invalidPasswordBlacklistedMessage=Choose a less frequently used password with a length of at least 8 characters
+invalidPasswordNotUsernameMessage=Your password must be different to your email address
+invalidPasswordExistingMessage=Enter your previous password
 
 missingTotpMessage=Please specify authenticator code.
-invalidPasswordExistingMessage=Invalid existing password.
-invalidPasswordConfirmMessage=Password confirmation doesn''t match.
 invalidTotpMessage=Invalid authenticator code.
 
-usernameExistsMessage=Username already exists.
-emailExistsMessage=Email already exists.
+missingUsernameMessage=Enter a username
+usernameExistsMessage=An account with that username already exists
 
 readOnlyUserMessage=You can''t update your account as it is read-only.
 readOnlyUsernameMessage=You can''t update your username as it is read-only.
@@ -181,17 +184,14 @@ staleCodeAccountMessage=The page expired. Please try one more time.
 consentDenied=Consent denied.
 
 accountDisabledMessage=Account is disabled, contact admin.
-
 accountTemporarilyDisabledMessage=Account is temporarily disabled, contact admin or try again later.
-invalidPasswordMinLengthMessage=Invalid password: minimum length {0}.
+
 invalidPasswordMinLowerCaseCharsMessage=Invalid password: must contain at least {0} lower case characters.
 invalidPasswordMinDigitsMessage=Invalid password: must contain at least {0} numerical digits.
 invalidPasswordMinUpperCaseCharsMessage=Invalid password: must contain at least {0} upper case characters.
 invalidPasswordMinSpecialCharsMessage=Invalid password: must contain at least {0} special characters.
-invalidPasswordNotUsernameMessage=Invalid password: must not be equal to the username.
 invalidPasswordRegexPatternMessage=Invalid password: fails to match regex pattern(s).
 invalidPasswordHistoryMessage=Invalid password: must not be equal to any of last {0} passwords.
-invalidPasswordBlacklistedMessage=Invalid password: password is blacklisted.
 invalidPasswordGenericMessage=Invalid password: new password doesn''t match password policies.
 
 # Authorization
@@ -282,13 +282,11 @@ authenticatorBackupCodesFinishSetUpMessage=12 backup codes was generated at this
 
 #Authenticator - Mobile Authenticator setup
 authenticatorMobileSetupTitle=Mobile Authenticator Setup
-smscodeIntroMessage=Enter your phone number and a verification code will be sent to your phone.
 mobileSetupStep1=Install an authenticator application on your phone. The applications listed here are supported.
 mobileSetupStep2=Open the application and scan the barcode.
 mobileSetupStep3=Enter the one-time code provided by the application and click Save to finish the setup.
 scanBarCode=Want to scan the barcode?
 enterBarCode=Enter the one-time code
-doCopy=Copy
 doFinish=Finish
 
 #Authenticator - SMS Code setup
