COSBETA-????: Update copy and error styling on account password page

--- a/govuk/account/messages/messages_en.properties
+++ b/govuk/account/messages/messages_en.properties
@@ -36,8 +36,8 @@ personalSubMessage=Manage this basic information: your first name, last name and
 authenticatorCode=One-time code
 email=Email
 firstName=Full name
-password=Current password
-currentPassword=Current Password
+password=Password
+passwordCurrent=Current password
 passwordConfirm=Repeat new password
 passwordNew=New password
 username=Username
