COSBETA-????: Further updates to account page error messages

--- a/govuk/account/messages/messages_en.properties
+++ b/govuk/account/messages/messages_en.properties
@@ -145,8 +145,7 @@ missingEmailMessage=Enter your email address
 emailExistsMessage=An account with that email address already exists
 invalidEmailMessage=Enter an email address in the correct format, for example, name@example.com
 
-invalidUserMessage=Invalid user
-missingPasswordMessage=Choose a new password
+missingPasswordMessage=Enter your password
 notMatchPasswordMessage=The passwords you enter must be identical
 invalidPasswordConfirmMessage=The passwords you enter must be identical
 invalidPasswordMinLengthMessage=Your password must have a length of at least {0} characters
@@ -154,11 +153,12 @@ invalidPasswordBlacklistedMessage=Choose a less frequently used password with a 
 invalidPasswordNotUsernameMessage=Your password must be different to your email address
 invalidPasswordExistingMessage=Enter your previous password
 
-missingTotpMessage=Please specify authenticator code.
-invalidTotpMessage=Invalid authenticator code.
-
+invalidUserMessage=Invalid user
 missingUsernameMessage=Enter a username
 usernameExistsMessage=An account with that username already exists
+
+missingTotpMessage=Please specify authenticator code.
+invalidTotpMessage=Invalid authenticator code.
 
 readOnlyUserMessage=You can''t update your account as it is read-only.
 readOnlyUsernameMessage=You can''t update your username as it is read-only.
