PSD-621 Use 'Current password' on the change password page

--- a/govuk/account/messages/messages_en.properties
+++ b/govuk/account/messages/messages_en.properties
@@ -36,7 +36,7 @@ personalSubMessage=Manage this basic information: your first name, last name and
 authenticatorCode=One-time code
 email=Email
 firstName=Full name
-password=Previous password
+password=Current password
 currentPassword=Current Password
 passwordConfirm=Repeat new password
 passwordNew=New password
