Change label for first name field on update profile page

--- a/govuk/login/messages/messages_en.properties
+++ b/govuk/login/messages/messages_en.properties
@@ -23,8 +23,9 @@ loginTotpStep3=Enter the one-time code provided by the application and click Con
 doAccept=I agree
 termsTitle=Terms and conditions
 termsTitleHtml=Terms and conditions
-termsIntro=Agree that you have read and understood the terms and conditions. 
+termsIntro=Agree that you have read and understood the terms and conditions.
 loginProfileTitle=Update your details
+firstName=Full name
 missingFirstNameMessage=Enter your full name
 missingEmailMessage=Enter your email address
 emailExistsMessage=An account with that email address already exists
