--- a/govuk-psd/login/messages/messages_en.properties
+++ b/govuk-psd/login/messages/messages_en.properties
@@ -1,2 +1,2 @@
-loginTitle=Sign in to Product safety database
-loginTitleHtml=Sign in to Product safety database
+loginTitle=Sign in to the Product safety database
+loginTitleHtml=Sign in to the Product safety database
